--- a/addons/web/static/lib/hoot/tests/index.html
+++ b/addons/web/static/lib/hoot/tests/index.html
@@ -18,9 +18,12 @@
                     "/web/static/lib/hoot/core/url": "/web/static/lib/hoot/core/url.js",
                     "/web/static/lib/hoot/expect": "/web/static/lib/hoot/expect.js",
                     "/web/static/lib/hoot/globals": "/web/static/lib/hoot/globals.js",
+                    "/web/static/lib/hoot/helpers/concurrency": "/web/static/lib/hoot/helpers/concurrency.js",
                     "/web/static/lib/hoot/helpers/dom": "/web/static/lib/hoot/helpers/dom.js",
                     "/web/static/lib/hoot/helpers/events": "/web/static/lib/hoot/helpers/events.js",
+                    "/web/static/lib/hoot/hoot": "/web/static/lib/hoot/hoot.js",
                     "/web/static/lib/hoot/lib/diff_match_patch": "/web/static/lib/hoot/lib/diff_match_patch.js",
+                    "/web/static/lib/hoot/tests/local_helpers": "/web/static/lib/hoot/tests/local_helpers.js",
                     "/web/static/lib/hoot/ui/hoot_config_dropdown": "/web/static/lib/hoot/ui/hoot_config_dropdown.js",
                     "/web/static/lib/hoot/ui/hoot_copy_button": "/web/static/lib/hoot/ui/hoot_copy_button.js",
                     "/web/static/lib/hoot/ui/hoot_main": "/web/static/lib/hoot/ui/hoot_main.js",
@@ -38,9 +41,17 @@
                 }
             }
         </script>
+
+        <!-- Test assets -->
         <script src="../hoot.js" type="module" defer></script>
+        <link rel="stylesheet" href="../ui/style.css" lang="scss" />
+
+        <!-- Test suites -->
         <script src="./utils.test.js" type="module" defer></script>
-        <link rel="stylesheet" href="../ui/style.scss" lang="scss" />
+        <script src="./core.test.js" type="module" defer></script>
+        <script src="./helpers/concurrency.test.js" type="module" defer></script>
+        <script src="./helpers/dom.test.js" type="module" defer></script>
+        <script src="./helpers/events.test.js" type="module" defer></script>
     </head>
     <body></body>
 </html>
