mock date + remove cdn

--- a/addons/web/static/lib/hoot/tests/index.html
+++ b/addons/web/static/lib/hoot/tests/index.html
@@ -8,8 +8,7 @@
             {
                 "imports": {
                     "@odoo/owl": "https://cdn.jsdelivr.net/npm/@odoo/owl@2.2.5/+esm",
-                    "/web/static/lib/hoot/addons/cleanup": "/web/static/lib/hoot/addons/cleanup.js",
-                    "/web/static/lib/hoot/addons/logger": "/web/static/lib/hoot/addons/logger.js",
+                    "/web/static/lib/hoot/core/cleanup": "/web/static/lib/hoot/core/cleanup.js",
                     "/web/static/lib/hoot/core/config": "/web/static/lib/hoot/core/config.js",
                     "/web/static/lib/hoot/core/expect": "/web/static/lib/hoot/core/expect.js",
                     "/web/static/lib/hoot/core/job": "/web/static/lib/hoot/core/job.js",
@@ -19,7 +18,7 @@
                     "/web/static/lib/hoot/core/tag": "/web/static/lib/hoot/core/tag.js",
                     "/web/static/lib/hoot/core/test": "/web/static/lib/hoot/core/test.js",
                     "/web/static/lib/hoot/core/url": "/web/static/lib/hoot/core/url.js",
-                    "/web/static/lib/hoot/globals": "/web/static/lib/hoot/globals.js",
+                    "/web/static/lib/hoot/globals": "/web/static/lib/hoot/tests/globals_mock.js",
                     "/web/static/lib/hoot/helpers/concurrency": "/web/static/lib/hoot/helpers/concurrency.js",
                     "/web/static/lib/hoot/helpers/dom": "/web/static/lib/hoot/helpers/dom.js",
                     "/web/static/lib/hoot/helpers/events": "/web/static/lib/hoot/helpers/events.js",
@@ -46,6 +45,13 @@
 
         <!-- Test assets -->
         <script src="../hoot.js" type="module" defer></script>
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+            crossorigin="anonymous"
+        />
+        <link rel="stylesheet" href="../lib/bootstrap-icons.min.css" />
         <link rel="stylesheet" href="../ui/style.css" lang="scss" />
 
         <!-- Test suites -->
